# trunk-git-client

./: .gitignore  CLAUDE.md  LICENSE  README.md  SPEC.md
dev-fixtures/: sample.trunk
docs/: .~lock.trunk-claudecode-handoff.docx#  .~lock.trunk-requirements-3.docx#  screenshot_1_main_graph.html  screenshot_2_staging.html  screenshot_3_preferences.html  screenshot_4_palette_and_dialogs.html  trunk-claude-design-briefing.docx  trunk-claude-design-briefing.md  trunk-claudecode-handoff.docx  trunk-claudecode-handoff.md  trunk-requirements-2.docx  trunk-requirements-3.docx  trunk-requirements-3.md
src/: index.html  preferences.html  rebase.html  resolve.html  staging.html  welcome.html
src-tauri/: Cargo.toml  tauri.conf.json  trunk-git-client.trunk
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  main.rs  state.rs
src-tauri/src/git/: mod.rs  rebase_plan.rs
src-tauri/src/recent/: mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/terminal/: mod.rs
src-tauri/src/workspace/: mod.rs
src/components/: branch-pill.js  button.js  command-palette.js  commit-overlay.js  commit-panel.js  commit-row.js  conflict-hunk.js  context-menu.js  dialog.js  diff-line.js  file-list.js  rebase-preview-lane.js  rebase-row.js  resize-handle.js  sidebar-item.js  toast.js
src/js/: app.js  branch-dialog-shared.js  clone-dialog.js  command-registry.js  conflictable-action-dialog.js  create-branch-dialog.js  delete-branch-dialog.js  fetch-dialog.js  graph-view.js  index-page.js  pull-dialog.js  push-dialog.js  push-pull-shared.js  (+13 more)
(+3 files in other folders)
